tests222/tests2/test398.out
lli: <stdin>:1:1: error: expected top-level entity
line 1: variable trueandtrue is not defined
^
